tests/error/tensor_errors/poly_tensor.err
Guppy compilation failed. Error in file /Users/croy/work/guppy/tests/error/tensor_errors/poly_tensor.py:14

12:    @guppy(module)
13:    def main() -> int:
14:        return (foo, foo)(42, 42)
                  ^^^^^^^^^^
GuppyTypeError: Polymorphic functions in tuples are not supported
